--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,7 +82,6 @@ project.ext.react = [
     enableHermes: true,  // clean and rebuild if changing
 ]
 
-apply from: "../../node_modules/react-native/react.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -137,6 +136,9 @@ android {
         jniLibs {
             pickFirsts += ['lib/x86/libc++_shared.so', 'lib/x86_64/libjsc.so', 'lib/arm64-v8a/libjsc.so', 'lib/arm64-v8a/libc++_shared.so', 'lib/x86_64/libc++_shared.so', 'lib/armeabi-v7a/libc++_shared.so']
         }
+    }
+          buildFeatures {
+        buildConfig = true
     }
     defaultConfig {
        
@@ -266,7 +268,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
      implementation project(':react-native-linear-gradient')
     //noinspection GradleDynamicVersion
-   implementation "com.facebook.react:react-native:0.70.4!!"  // From node_modules
+     implementation("com.facebook.react:react-android")
  implementation project(':react-native-splash-screen')
     implementation project(':react-native-share-menu')
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
@@ -289,33 +291,14 @@ implementation 'com.facebook.soloader:soloader:0.10.3+'
 
     if (enableHermes) {
         //noinspection GradleDynamicVersion
-       implementation("com.facebook.react:hermes-engine:0.70.4") { // From node_modules
-            force = true
-            exclude group:'com.facebook.fbjni'
-        }
+         implementation("com.facebook.react:hermes-android")
         
     } else {
         implementation jscFlavor
     }
 }
 
-if (isNewArchitectureEnabled()) {
-    // If new architecture is enabled, we let you build RN from source
-    // Otherwise we fallback to a prebuilt .aar bundled in the NPM package.
-    // This will be applied to all the imported transtitive dependency.
-    configurations.all {
-        resolutionStrategy.dependencySubstitution {
-             force "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
-        force "androidx.lifecycle:lifecycle-viewmodel:2.5.0"
-            substitute(module("com.facebook.react:react-native"))
-                    .using(project(":ReactAndroid"))
-                    .because("On New Architecture we're building React Native from source")
-            substitute(module("com.facebook.react:hermes-engine"))
-                    .using(project(":ReactAndroid:hermes-engine"))
-                    .because("On New Architecture we're building Hermes from source")
-        }
-    }
-}
+
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
@@ -323,7 +306,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.implementation
     into 'libs'
 }
-
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 
 apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
