--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,10 @@
 import org.apache.tools.ant.taskdefs.condition.Os
-
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
-        minSdkVersion = 21
+        minSdkVersion = 23
         compileSdkVersion = 33
         targetSdkVersion = 33
 
@@ -29,12 +28,14 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 allprojects {
     repositories {
            google()
         //    maven { url 'https://jitpack.io' } //added
         maven {
+            
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
         }
@@ -42,6 +43,7 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+         maven { url "https://cdn.veriff.me/android/" } //veriff
          jcenter()
         mavenCentral {
             // We don't want to fetch react-native from Maven Central as there are
@@ -52,6 +54,17 @@ allprojects {
         }
      
         maven { url 'https://www.jitpack.io' }
+    }
+}
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty('android')) {
+            project.android {
+                if (namespace == null) {
+                    namespace project.group
+                }
+            }
+        }
     }
 }
 apply plugin: 'com.google.android.gms.strict-version-matcher-plugin'
