--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -43,7 +43,7 @@ apply from: file("../node_modules/@react-native-community/cli-platform-android/n
 include ':app'
 include ':app', ':react-native-code-push'
 project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
-includeBuild('../node_modules/react-native-gradle-plugin')
+includeBuild('../node_modules/@react-native/gradle-plugin')
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
