--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react-native-dotenv": "^0.2.0",
+    "@veriff/react-native-sdk": "^6.0.0",
     "appcenter": "4.4.5",
     "appcenter-analytics": "4.4.5",
     "appcenter-crashes": "4.4.5",
@@ -38,9 +39,10 @@
     "lottie-react-native": "^5.1.3",
     "patch-package": "^6.5.1",
     "punycode": "^1.4.1",
-    "react": "18.1.0",
+  
     "react-i18next": "^11.18.4",
-    "react-native": "0.70.4",
+    "react": "18.2.0",
+    "react-native": "0.73.4",
     "react-native-axios": "^0.17.1",
     "react-native-biometrics": "^3.0.1",
     "react-native-camera": "^4.2.1",
@@ -74,7 +76,7 @@
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "^2.8.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-rename": "^2.9.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
