--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,7 +26,7 @@ android.enableJetifier=true
 hermesEnabled=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.125.0
-
+android.defaults.buildfeatures.buildconfig=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
