--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,81 +1,46 @@
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+# Resolve react_native_pods.rb with node to allow for hoisting
+require Pod::Executable.execute_command('node', ['-p',
+  'require.resolve(
+    "react-native/scripts/react_native_pods.rb",
+    {paths: [process.argv[1]]},
+  )', __dir__]).strip
 
-platform :ios, '14.2'
-install! 'cocoapods', :deterministic_uuids => false
+platform :ios, 14.0
+prepare_react_native_project!
+use_frameworks! :linkage => :static
+# If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
+# because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
+#
+# To fix this you can also exclude `react-native-flipper` using a `react-native.config.js`
+# ```js
+# module.exports = {
+#   dependencies: {
+#     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
+# ```
+
+
+linkage = ENV['USE_FRAMEWORKS']
+if linkage != nil
+  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
+  use_frameworks! :linkage => linkage.to_sym
+end
 
 target 'EarthId' do
   config = use_native_modules!
-def node_require(script)
-    # Resolve script with node to allow for hoisting
-     require Pod::Executable.execute_command('node', ['-p',
-       "require.resolve(
-         '#{script}',
-         {paths: [process.argv[1]]},
-       )", __dir__]).strip
-   end
-  
-   node_require('react-native/scripts/react_native_pods.rb')
-   node_require('react-native-permissions/scripts/setup.rb')
-   require_relative '../node_modules/react-native-permissions/scripts/setup'
-   permissions_path = '../node_modules/react-native-permissions/ios'
-pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
-  # Flags change depending on the env values.
-  flags = get_default_flags()
+  $RNFirebaseAsStaticFramework = true
 
+  pod 'RNShareMenu', :path => '../node_modules/react-native-share-menu'
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => flags[:hermes_enabled],
-    :fabric_enabled => flags[:fabric_enabled],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
-
-pod 'react-native-camera', path: '../node_modules/react-native-camera', subspecs: [
-  'FaceDetectorMLKit'
-]
-pod 'RNShareMenu', :path => '../node_modules/react-native-share-menu'
-  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
-
-  pod 'RNSVG', :path => '../node_modules/react-native-svg'
-
-
-
-  pod 'RNSnackbar', :path => '../node_modules/react-native-snackbar'
-  pod 'react-native-version-check', :path => '../node_modules/react-native-version-check'
-  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
-
-  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
-
-  pod 'RNFS', :path => '../node_modules/react-native-fs'
-
-  pod 'RNCCheckbox', :path => '../node_modules/@react-native-community/checkbox'
-  pod 'react-native-view-shot', :path => '../node_modules/react-native-view-shot'
-  pod 'react-native-html-to-pdf', :path => '../node_modules/react-native-html-to-pdf'
-  pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
-  pod 'react-native-image-base64', :path => '../node_modules/react-native-image-base64'
-
-
-
-  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
-  pod 'CodePush', :path => '../node_modules/react-native-code-push'
-
-
-
-
-  pod 'RNPDF', :path => '../node_modules/react-native-view-pdf'
 
   target 'EarthIdTests' do
     inherit! :complete
     # Pods for testing
   end
-
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable the next line.
-  use_flipper!()
 
   post_install do |installer|
       react_native_post_install(
@@ -94,12 +59,11 @@ pod 'RNShareMenu', :path => '../node_modules/react-native-share-menu'
   
         end
       end
-      __apply_Xcode_12_5_M1_post_install_workaround(installer)
+
     end
 end
 target 'ShareExtension' do
   use_react_native!
-
   pod 'RNShareMenu', :path => '../node_modules/react-native-share-menu'
  # Manually link packages here to keep your extension bundle size minimal
 end
