--- a/package.json
+++ b/package.json
@@ -31,16 +31,18 @@
     "aws-sdk": "^2.1429.0",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "google-libphonenumber": "^3.2.33",
     "i18next": "^21.9.1",
     "is-mergeable-object": "^1.1.1",
+    "level-filesystem": "^1.2.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.3",
     "patch-package": "^6.5.1",
     "punycode": "^1.4.1",
     "react": "18.1.0",
     "react-i18next": "^11.18.4",
-    "react-native": "0.70.4",
+    "react-native": "^0.70.4",
     "react-native-axios": "^0.17.1",
     "react-native-biometrics": "^3.0.1",
     "react-native-camera": "^4.2.1",
@@ -65,7 +67,7 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-localize": "^2.2.3",
     "react-native-modal": "^13.0.1",
-    "react-native-permissions": "^4.1.1",
+    "react-native-permissions": "^4.1.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-plaid-link-sdk": "^11.0.3",
     "react-native-qrcode-image": "^0.2.8",
