--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,6 @@ require Pod::Executable.execute_command('node', ['-p',
 
 platform :ios, 14.0
 prepare_react_native_project!
-use_frameworks! :linkage => :static
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
 # because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
 #
@@ -28,8 +27,10 @@ end
 target 'EarthId' do
   config = use_native_modules!
   $RNFirebaseAsStaticFramework = true
+  pod 'ZXingObjC', '~> 3.1'
 
   pod 'RNShareMenu', :path => '../node_modules/react-native-share-menu'
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
