--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,10 +81,20 @@ def reactNativeArchitectures() {
 
 
 android {
+    
     ndkVersion rootProject.ext.ndkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
     namespace "com.earthid"
+    configurations {
+    all*.exclude module: 'bcprov-jdk15to18'
+    all*.exclude module: 'bcutil-jdk18on'
+    all*.exclude module: 'bcprov-jdk15on'
+    all*.exclude module: 'bcutil-jdk15on'
+}
+  dexOptions {
+        javaMaxHeapSize "4G"
+    }
     defaultConfig {
         applicationId "com.earthid"
         minSdkVersion rootProject.ext.minSdkVersion
