--- a/android/build.gradle
+++ b/android/build.gradle
@@ -53,7 +53,7 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-      
+       maven { url "https://cdn.veriff.me/android/" } //veriff
         mavenCentral {
             // We don't want to fetch react-native from Maven Central as there are
             // older versions over there.
