--- a/ios/EarthId/Info.plist
+++ b/ios/EarthId/Info.plist
@@ -85,6 +85,22 @@
 	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) uses photos</string>
+
+<key>NSCameraUsageDescription</key>
+    <string>We need access to your camera to capture photos and video for identification purposes.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We need access to your microphone to record audio for identification purposes.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to your photo library to import photos for identification purposes.</string>
+    <key>NFCReaderUsageDescription</key>
+    <string>We need access to NFC to read passport information for identification purposes.</string>
+    <key>com.apple.developer.nfc.readersession.iso7816.select-identifiers</key>
+    <array>
+        <string>A0000002471001</string>
+        <string>A0000002472001</string>
+        <string>00000000000000</string>
+    </array>
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -101,5 +117,6 @@
 	<string>Light</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	
 </dict>
 </plist>
