--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "globalidconfig": "npx react-native-rename `GlobalId` -b com.globalidiqtechandroid",
     "earthidconfig": "npx react-native-rename `EarthId` -b com.myearthid",
     "clean": "cd android && ./gradlew clean",
-    "apk": "cd android && ./gradlew assembleRelease",
+    "apk": "cd android && gradlew assembleRelease",
     "playstore": "cd android && ./gradlew bundleRelease",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -50,6 +50,7 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-device-info": "^10.0.0",
     "react-native-document-picker": "^8.1.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.1.0",
     "react-native-event-listeners": "^1.0.7",
     "react-native-fs": "^2.20.0",
@@ -71,7 +72,8 @@
     "react-native-qrcode-image": "^0.2.8",
     "react-native-qrcode-mask": "^1.0.0",
     "react-native-qrcode-scanner": "^1.5.5",
-    "react-native-qrcode-svg": "^6.1.2",
+    "react-native-qrcode-svg": "^6.3.0",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.8.1",
