All changes till s3Document upload and UI fixes

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
- AWS_ACCESS_KEY = 'AKIAU4JK3LMEAKCXLXWE';
- AWS_SECRET_KEY = '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';
+ AWS_ACCESS_KEY = 'AKIAU4JK3LMEAKCXLXWE'
+ AWS_SECRET_KEY = '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'
