--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
- package="com.globalidiqtechandroid">
+ >
 
    <uses-permission android:name="android.permission.INTERNET" />
    <uses-permission android:name="android.permission.CAMERA" />
@@ -13,9 +13,9 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@mipmap/earthidlogo"
       
-      android:roundIcon="@mipmap/ic_launcher_round"
+      android:roundIcon="@mipmap/earthidlogo_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       <activity
