--- a/ios/ShareExtension/Info.plist
+++ b/ios/ShareExtension/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>HostAppBundleIdentifier</key>
-	<string>com.globalidiqtechandroid</string>
+	<string>com.earthid</string>
 	<key>HostAppURLScheme</key>
 	<string>mycustomscheme://</string>
 	<key>NSAppTransportSecurity</key>
