--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,7 +85,7 @@ android {
     ndkVersion rootProject.ext.ndkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
-    namespace "com.globalidiqtechandroid"
+    namespace "com.globalidiqtechandroid1"
     configurations {
     all*.exclude module: 'bcprov-jdk15to18'
     all*.exclude module: 'bcutil-jdk18on'
@@ -96,12 +96,12 @@ android {
         javaMaxHeapSize "4G"
     }
     defaultConfig {
-        applicationId "com.globalidiqtechandroid"
+        applicationId "com.globalidiqtechandroid1"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         missingDimensionStrategy 'react-native-camera', 'mlkit' 
-        versionCode 28
-        versionName "5.9.3"
+        versionCode 2
+        versionName "1.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
     }
